# MT

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json
include/: cross_sections.h  event_generator.h  helper.h  histogram.h  matrix_element_method.h  n_dimensional_integral.h  parameters.h  parton_distribution_function.h  phase_space_generator.h  qcd_parameters.h
include/vegas/: ndimvegas.h
libs/QCDLoop/: makefile  new_output.txt  test
libs/QCDLoop/ff/: ._ffxc0i.f  ff.cmake  ffinit_mine.f  makefile
libs/QCDLoop/ql/: ._qltri2.f  makefile  qcdloop.cmake
libs/amps/: CMakeLists.txt  amps.h  gg_ttb.f  gg_ttbg.f  gu_ttbu.f  gub_ttbub.f  makefile  ubg_ttbub.f  ubu_ttb.f  ubu_ttbg.f  ug_ttbu.f  uub_ttb.f  uub_ttbg.f
libs/cxxopts/: CMakeLists.txt
libs/helas204/: boostx.F  check.csh  coup1x.F  coup2x.F  coup3x.F  coup4x.F  dhelas.h  eaixxx.F  eaoxxx.F  fsixxx.F  fsoxxx.F  fvixxx.F  fvoxxx.F  ggggxx.F  gggxxx.F  helas.cmake  hioxxx.F  hsssxx.F  hssxxx.F  hvsxxx.F  hvvxxx.F  iosxxx.F  iovxxx.F  ixxxxx.F  j3xxxx.F  jeexxx.F  jgggxx.F  jggxxx.F  jioxxx.F  jssxxx.F  jtioxx.F  jvssxx.F  jvsxxx.F  jvvxxx.F  jw3wxx.F  jwwwxx.F  makefile  mom2cx.F  momntx.F  oxxxxx.F  (+11 more)
libs/helas204/objs/x86_64/gnu/: makefile.arch  settings
libs/helas204/objs/x86_64/intel/: makefile.arch  settings
libs/ranlux-3.3/: CMakeLists.txt
libs/sysinfo/: CMakeLists.txt  SysInfo.h
libs/vegas/: CMakeLists.txt
libs/virtual/: #bsymom.h#  BSYexample_backup.f  CMakeLists.txt  ampgg.f  ampgg2.f  ampggint.f  ampggsums.f  ampqq.f  ampqq2.f  ampqqint.f  ampqqsums.f  bsymom.h  bsyparams.h  bsypptt.f  bsypptt_backup.f  bsyspinit.f  bsyspinors.f  makefile  makefile_local  virtual_amps.h
src/: SysInfo.cc  cross_sections.cc  event_generator.cc  helper.cc  histogram.cc  main.cc  matrix_element_method.cc  n_dimensional_integral.cc  parameters.cc  parton_distribution_function.cc  phase_space_generator.cc  qcd_parameters.cc
